--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -39,10 +39,10 @@
 
 		<div class="gap-0 grid grid-cols-12 grid-flow-col max-w-screen-lg md:gap-10 md:px-0 mt-20 px-5">
 			<div class="col-span-12 md:col-span-9 mx-auto space-y-12">
-				<% @movie.screenings&.order("day ASC")&.group_by { |s| s&.cinema&.display_name }.each_with_index do |cinema_name_group, index| %>
+				<% @movie.screenings&.order("day ASC")&.group_by { |s| [s.cinema&.display_name, s.cinema&.google_maps] }.each_with_index do |cinema_name_group, index| %>
 					<div class="">
 						<h2 id="<%= cinema_name_group[1][0]&.cinema&.slug %>" class="font-bold text-xl mb-2 text-gray-800">
-							<%= cinema_name_group[0] %>
+							<%= cinema_name_group[0][0] %>
 						</h2>
 						<div class="gap-1 grid grid-cols-1 grid-flow-row md:grid-cols-3">
 							<% cinema_name_group[1].filter { |screening| screening.day.to_date >= Date.current }.group_by { |screening| screening.day }.each do |screening_day_group| %>
@@ -51,7 +51,7 @@
 										<%= day_of_week(screening_day_group[0]).titleize %>
 									</h3>
 									<div class="space-y-1">
-										<% screening_day_group[1].each do |screening| %>
+										<% screening_day_group[1].filter{|s| s.times&.any?}.each do |screening| %>
 											<div class="">
 												<div class="italic text-xs">
 													<%= screening.language %> <span class="text-xxs text-gray-500"><%= screening.screen_type %></span>
