--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -73,7 +73,7 @@
 				<% end %>
 			</div>
 			<div class="col-span-3 hidden md:block">
-				<div class="sticky top-24">
+				<div class="">
 					<h4 class="font-bold text-xl mb-2 text-gray-800">Cinemas</h4>
 					<div class="space-y-3">
 						<% @cinemas&.each_with_index do |cinema, index| %>
