--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -39,11 +39,13 @@
 
 		<div class="gap-0 grid grid-cols-12 grid-flow-col max-w-screen-lg md:gap-10 md:px-0 mt-20 px-5">
 			<div class="col-span-12 md:col-span-9 mx-auto space-y-12">
-				<% @movie.screenings&.order("day ASC")&.group_by { |s| [s.cinema&.display_name, s.cinema&.google_maps] }.each_with_index do |cinema_name_group, index| %>
+				<% @movie.screenings&.order("day ASC")&.group_by { |s| [s.cinema&.display_name, s.cinema&.google_id] }.each_with_index do |cinema_name_group, index| %>
 					<div class="">
 						<h2 id="<%= cinema_name_group[1][0]&.cinema&.slug %>" class="font-bold text-xl mb-2 text-gray-800">
 							<%= cinema_name_group[0][0] %>
 						</h2>
+						<%#= cinema_name_group[1][0]&.cinema&.neighborhood %>
+						<%= cinema_name_group[1][index]&.cinema&.address %>
 						<div class="gap-1 grid grid-cols-1 grid-flow-row md:grid-cols-3">
 							<% cinema_name_group[1].filter { |screening| screening.day.to_date >= Date.current }.group_by { |screening| screening.day }.each do |screening_day_group| %>
 								<div class="p-3 bg-gray-100 rounded">
