Adjust css tyle in users#show

--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -5,33 +5,15 @@
 <section id="page"
 				 data-controller="page"
 				 data-page-target="page"
-				 class="min-h-screen md:border is-animated mb-24 md:w-4/12 md:mt-12 mx-auto overflow-hidden md:pb-5 md:rounded-2xl md:shadow-2xl sm:container space-y-2">
+				 class="md:border is-animated mb-24 md:w-4/12 md:mt-12 mx-auto overflow-hidden md:pb-5 md:rounded-lg md:shadow-2xl sm:container space-y-2">
 	<%= notice %>
 
-	<div class="bg-gray-100 flex md:bg-auto px-5 py-5 text-gray-800">
-		<div class="relative w-20 mr-3 overflow-hidden bg-gray-100 rounded-full">
-			<div class="w-full aspect-ratio-square"></div>
-			<% if @user&.picture %>
-				<%= image_tag(@user.picture, { class: "w-full h-full absolute top-0 left-0 mx-auto mr-4 rounded-full", alt: @user.name, onerror: "this.style.opacity='0'" }) rescue nil %>
-			<% else %>
-				<div class="absolute top-0 left-0 w-full h-full"></div>
-			<% end %>
-		</div>
-		<div>
-			<h1 class="font-bold font-display mb-2 text-3xl text-gray-900">
-				<%= @user.first_name %>
-			</h1>
-			<% if current_user == @user %>
-				<div class="space-x-1">
-					<%= link_to "Editar perfil", edit_user_path(@user), class: 'bg-white inline-block px-2 py-1 rounded text-gray-600 text-sm' %>
-					<%= link_to "Sair", destroy_user_session_path, class: 'bg-white inline-block px-2 py-1 rounded text-gray-600 text-sm', method: :delete %>
-				</div>
-			<% end %>
-			<% if current_user != @user %>
-				<%= render(FriendshipButtonComponent.new(user: current_user, friend: @user)) %>
-			<% end %>
-		</div>
+	<div class="md:bg-brand-100 md:bg-auto pb-1 pt-3 px-5 text-gray-800">
+		<h1 class="font-bold font-display pl-20 text-brand-600 text-lg">
+			<%= @user.first_name %>
+		</h1>
 	</div>
+
 
 	<%# if current_user.admin? %>
 	<!--		<div class="py-6 bg-white">-->
@@ -109,75 +91,98 @@
 		<!--				</div>-->
 		<%# end %>
 		<!--		</div>-->
-		<div class="py-6">
-			<h2 class="font-bold font-display text-gray-800 uppercase -mb-1 px-5 inline-block">
-				Locais que sigo
-			</h2>
-			<% if @user.following_places.present? %>
-				<div class="w-screen mt-3">
-					<div class="flex flex-wrap px-5 pl-5 space-y-2">
-						<% @user&.following_places.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
-							<a onclick="window.AnimateModule.animatePageHide()"
-								 href="<%= organizer_or_place_path resource %>"
-								 class="border cursor-pointer h-content inline-block md:hover:bg-gray-50 mr-2 mt-2 px-5 py-3 relative font-semibold rounded-full">
-								<%= resource.details_name.titleize %>
-								<% if resource.events.active.size > 0 %>
+
+		<div class="space-y-10">
+			<div class="-mt-10 flex items-end">
+				<div class="rounded-lg ml-5">
+					<% if @user&.picture %>
+						<%= image_tag(@user.picture, { class: "w-16 h-16 mx-auto rounded-full", alt: @user.name, onerror: "this.style.opacity='0'" }) rescue nil %>
+					<% else %>
+						<div class="absolute top-0 left-0 w-full h-full"></div>
+					<% end %>
+				</div>
+				<div class="ml-2">
+					<% if current_user == @user %>
+						<div class="space-x-1">
+							<%= link_to "Editar perfil", edit_user_path(@user), class: 'bg-white inline-block px-2 py-1 rounded text-brand-600 text-sm' %>
+							<%= link_to "Sair", destroy_user_session_path, class: 'bg-white inline-block px-2 py-1 rounded text-brand-600 text-sm', method: :delete %>
+						</div>
+					<% end %>
+					<% if current_user != @user %>
+						<%= render(FriendshipButtonComponent.new(user: current_user, friend: @user)) %>
+					<% end %>
+				</div>
+			</div>
+
+			<div class="">
+				<h2 class="font-display inline-block px-5 text-gray-800 text-xl">
+					Locais que sigo
+				</h2>
+				<% if @user.following_places.present? %>
+					<div class="w-screen md:w-auto mt-2">
+						<div class="flex flex-wrap px-5 pl-5">
+							<% @user&.following_places.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
+								<a onclick="window.AnimateModule.animatePageHide()"
+									 href="<%= organizer_or_place_path resource %>"
+									 class="items-center cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-3 mr-3 px-4 py-2 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content bg-gray-100 text-gray-600">
+									<%= resource.details_name.titleize %>
+									<% if resource.events.active.size > 0 %>
   									<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-5 text-sm bg-white rounded-full">
   										<%= resource.events.active.size %>
   									</span>
-								<% end %>
-							</a>
-						<% end %>
+									<% end %>
+								</a>
+							<% end %>
+						</div>
 					</div>
-				</div>
-			<% else %>
-				<div class="px-5 text-sm text-gray-500 mt-3">
-					Você não segue nenhum local ainda
-				</div>
-			<% end %>
-		</div>
-		<div class="py-6 bg-white">
-			<h2 class="font-bold font-display uppercase -mb-1 px-5 inline-block text-gray-800">
-				Organizadores que sigo
-			</h2>
-			<% if @user.following_organizers.present? %>
-				<div class="w-screen mt-3">
-					<div class="flex flex-wrap px-5 pl-5 space-y-2">
-						<% @user&.following_organizers.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
-							<a onclick="window.AnimateModule.animatePageHide()"
-								 href="<%= organizer_or_place_path resource %>"
-								 class="border cursor-pointer font-bold h-content inline-block md:hover:bg-gray-50 mr-2 mt-2 px-5 py-3 relative rounded-full">
-								<%= resource.details_name.titleize %>
-								<% if resource.events.active.size > 0 %>
+				<% else %>
+					<div class="px-5 text-sm text-gray-500 mt-3">
+						Você não segue nenhum local ainda
+					</div>
+				<% end %>
+			</div>
+			<div class="">
+				<h2 class="font-display inline-block px-5 text-gray-800 text-xl">
+					Organizadores que sigo
+				</h2>
+				<% if @user.following_organizers.present? %>
+					<div class="w-screen md:w-auto mt-2">
+						<div class="flex flex-wrap px-5 pl-5">
+							<% @user&.following_organizers.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
+								<a onclick="window.AnimateModule.animatePageHide()"
+									 href="<%= organizer_or_place_path resource %>"
+									 class="items-center cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-3 mr-3 px-4 py-2 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content bg-gray-100 text-gray-600">
+									<%= resource.details_name.titleize %>
+									<% if resource.events.active.size > 0 %>
   									<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-5 text-sm font-semibold bg-white rounded-full">
   										<%= resource.events.active.size %>
   									</span>
-								<% end %>
-							</a>
-						<% end %>
+									<% end %>
+								</a>
+							<% end %>
+						</div>
 					</div>
-				</div>
-			<% else %>
-				<div class="px-5 text-sm text-gray-500 mt-3">
-					Você não segue nenhum organizador ainda
-				</div>
-			<% end %>
-		</div>
+				<% else %>
+					<div class="px-5 text-sm text-gray-500 mt-3">
+						Você não segue nenhum organizador ainda
+					</div>
+				<% end %>
+			</div>
 	<% end %>
 
 	<% if current_user.friendship_accepted? @user %>
 		<div class="pt-2 mx-auto space-y-2 bg-gray-50 is-animated lg:w-9/12 md:mt-40 sm:container">
 			<%#= month_calendar events: @upcoming_events do |date, events| %>
-<!--				<a href="<%#= my_agenda_path start_date: date %>" class="mx-auto text-sm day-of-month">-->
-					<%#= date.strftime '%e' %>
-<!--				</a>-->
+			<!--				<a href="<%#= my_agenda_path start_date: date %>" class="mx-auto text-sm day-of-month">-->
+			<%#= date.strftime '%e' %>
+			<!--				</a>-->
 
-				<%# events.each_with_index do |event, index| %>
-					<%# if event && index == 0 %>
-<!--						<div class="w-1 h-1 mx-auto bg-brand-500 rounded-full">-->
-<!--						</div>-->
-					<%# end %>
-				<%# end %>
+			<%# events.each_with_index do |event, index| %>
+			<%# if event && index == 0 %>
+			<!--						<div class="w-1 h-1 mx-auto bg-brand-500 rounded-full">-->
+			<!--						</div>-->
+			<%# end %>
+			<%# end %>
 			<%# end %>
 		</div>
 
@@ -189,6 +194,7 @@
 		</div>
 	<% end %>
 
+	</div>
 	<%#= render partial: 'sheets/friendships/edit',
 						 locals:  {
 								 user:   current_user,
